<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.GamesFragment.PannaFamilyFragment">

    <include layout="@layout/bg_withouttext_layout"/>
<!--    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight=".5"
                android:textSize="12sp"
                android:background="@drawable/bg_digit_shape"
                android:drawableEnd="@drawable/thursday_16px"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/select_date"
                android:textAlignment="center"

                />
            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight=".5"
                android:background="@drawable/bg_digit_shape"
                android:padding="10dp"
                android:textSize="12sp"
                android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
                android:drawableTint="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/select_game_type"
                android:textAlignment="center"
                />

        </LinearLayout>



        <RelativeLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            >
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/panna_family"

                android:layout_centerVertical="true"

                android:paddingLeft="10dp"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/double_panna"
                android:visibility="gone"
                android:layout_centerVertical="true"

                android:paddingLeft="10dp"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/triple_panna"
                android:visibility="gone"
                android:layout_centerVertical="true"

                android:paddingLeft="10dp"

                />

            <AutoCompleteTextView
                android:id="@+id/et_digit"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/bg_digit_shape"
                android:gravity="center"
                android:hint="@string/enter_digit"
                android:inputType="number"
                android:maxLength="5"
                android:padding="10dp"
                android:textAlignment="center"
               style="@style/bid_autoText"

                 />


        </RelativeLayout>

        <RelativeLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            >
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point"


                android:layout_centerVertical="true"

                android:paddingLeft="10dp"
                />

            <EditText
                android:id="@+id/et_point"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/bg_digit_shape"
                android:hint="@string/enter_points"
                android:inputType="number"
                android:maxLength="5"
                android:gravity="center"
                android:padding="10dp"
                android:textAlignment="center"
               style="@style/bid_autoText"


                 />


        </RelativeLayout>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"

            android:paddingVertical="5dp"
            android:text="@string/add" />
    </LinearLayout>
    </ScrollView>
    <include
        android:layout_below="@+id/scroll"
        layout="@layout/gamebottomlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rel_submit"
        />
    <RelativeLayout

        android:id="@+id/rel_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <include
            layout="@layout/total_amount_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>
<!--    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->
</RelativeLayout>