<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
                android:id="@+id/iv_ytube"
                android:src="@drawable/nointernet"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_height="150dp"
                />
        <TextView
            android:textSize="@dimen/all_tvsize_7pt"
            style="@style/MyTextview_semibold"
                android:layout_margin="5dp"
                android:gravity="center"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_your_internet_connection_and_try_again"/>
        <TextView
            style="@style/MyTextview_semibold"
                android:layout_margin="10dp"
                android:gravity="center"
             android:textAllCaps="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_turn_on"/>
        <LinearLayout
            android:layout_margin="@dimen/space_5"
            android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/btn_wifi"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/wifi"
                    android:drawableLeft="@drawable/wifi"
                    android:drawableTint="@color/white"

                    />
            <Button
                    android:id="@+id/btn_data"
                android:layout_weight="1"
                android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:drawableLeft="@drawable/up_down_arrow_24px"
                    android:drawableTint="@color/white"
                    android:layout_marginLeft="10dp"
                    android:text="@string/mobile_data"
                    android:gravity="center"
                    />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    </LinearLayout>

</LinearLayout>