<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.GamesFragment.JodiFamilyFragment">

    <include layout="@layout/bg_withouttext_layout"/>
<!--    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight=".5"
                android:background="@drawable/card_shape"
                android:drawableEnd="@drawable/thursday_16px"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/select_date"
                android:textSize="12sp"
                android:textAlignment="center"
                android:textAllCaps="true"
                />
            <TextView
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:textStyle="italic"
                android:layout_weight=".5"
                android:padding="10dp"
                android:textSize="12sp"
                android:layout_margin="5dp"
                android:textAlignment="center"

                android:background="@drawable/card_shape"
                android:text="@string/select_game_type"
                android:layout_height="wrap_content"/>

        </LinearLayout>



        <RelativeLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:text="JODI DIGIT"
                    android:textAllCaps="true"

                    android:textSize="15dp"
                     />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/double_panna"
                android:visibility="gone"
                android:layout_centerVertical="true"

                android:paddingLeft="10dp"

                android:textSize="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/triple_panna"
                android:visibility="gone"
                android:layout_centerVertical="true"

                android:paddingLeft="10dp"

                android:textSize="15dp"/>

            <AutoCompleteTextView
                    android:id="@+id/et_digit"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/card_shape"
                    android:dropDownHeight="150dp"
                    android:gravity="center"
                    android:hint="@string/enter_digit"
                    android:inputType="number"
                    android:maxLength="2"
                    android:padding="10dp"
                    android:textAlignment="center"
                   style="@style/bid_autoText"
                    android:textSize="14dp"



                    />


        </RelativeLayout>

        <RelativeLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            >
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point"
                android:textAllCaps="true"

                android:layout_centerVertical="true"

                android:paddingLeft="10dp"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/et_point"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/card_shape"
                android:gravity="center"
                android:hint="@string/enter_points"
                android:inputType="number"
                android:maxLength="5"
                android:padding="10dp"
                android:textAlignment="center"
               style="@style/bid_autoText"
                android:textSize="14dp"
                 />


        </RelativeLayout>
        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_button"
            android:paddingVertical="5dp"
            android:text="@string/add" />

    </LinearLayout>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        layout="@layout/gamebottomlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom"
        android:layout_below="@+id/scroll" />
    <include
        android:id="@+id/bottom"
        layout="@layout/total_amount_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>
<!--    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->
</RelativeLayout>